--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-react": "4.4.1",
     "antd": "^5.27.0",
     "apexcharts": "4.7.0",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "formik": "2.4.6",
@@ -22,6 +23,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "iconsax-react": "^0.0.8",
     "iconsax-reactjs": "^0.0.8",
+    "lodash": "^4.17.21",
     "lodash-es": "4.17.21",
     "prop-types": "15.8.1",
     "react": "19.1.0",
