--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "dependencies": {
     "@emotion/cache": "11.14.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "5.2.5",
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "7.0.0-beta.12",
     "@mui/material": "^7.3.1",
+    "@mui/styles": "^6.5.0",
     "@mui/system": "7.1.0",
     "@mui/x-data-grid": "^8.10.0",
-    "@vitejs/plugin-react": "4.4.1",
     "antd": "^5.27.0",
     "apexcharts": "4.7.0",
     "axios": "^1.11.0",
@@ -25,7 +25,7 @@
     "iconsax-reactjs": "^0.0.8",
     "lodash": "^4.17.21",
     "lodash-es": "4.17.21",
-    "prop-types": "15.8.1",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-apexcharts": "1.7.0",
     "react-device-detect": "2.2.3",
@@ -37,9 +37,9 @@
     "react-toastify": "^11.0.5",
     "simplebar-react": "3.3.1",
     "swr": "2.3.3",
-    "vite": "6.3.5",
     "vite-jsconfig-paths": "2.0.1",
     "web-vitals": "5.0.1",
+    "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "yup": "1.6.1"
   },
@@ -73,6 +73,7 @@
     "@eslint/compat": "1.2.9",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.27.0",
+    "@vitejs/plugin-react": "^5.0.2",
     "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-jsx-a11y": "6.10.2",
@@ -80,7 +81,8 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "immutable": "5.1.2",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "vite": "^7.1.3"
   },
   "packageManager": "yarn@4.9.1"
 }
