--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-apexcharts": "1.7.0",
     "react-device-detect": "2.2.3",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-i18next": "^15.6.1",
     "react-router": "7.6.0",
     "react-router-dom": "^7.8.2",
