--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
     "@emotion/cache": "11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@fontsource/inter": "5.2.5",
+    "@fontsource/inter": "^5.2.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "7.0.0-beta.12",
     "@mui/material": "^7.3.4",
     "@mui/styles": "^6.5.0",
     "@mui/system": "7.1.0",
     "@mui/x-data-grid": "^8.10.0",
+    "@mui/x-date-pickers": "^8.15.0",
     "antd": "^5.27.0",
     "apexcharts": "4.7.0",
     "axios": "^1.11.0",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "file-saver": "^2.0.5",
     "formik": "2.4.6",
     "framer-motion": "12.12.1",
