--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 PUBLIC_URL = https://ableproadmin.com/react/login
 VITE_APP_BASE_NAME = /react/login
-VITE_API_BASE_URL=http://10.232.100.50:8080
-# VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=http://localhost:8080
