--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,11 @@ server {
 
   root /usr/share/nginx/html;
 
+  # ✅ FIX: handle "/react/login" (no trailing slash) without redirect
+  location = /react/login {
+    try_files /react/login/index.html =404;
+  }
+
   location /react/login/ {
     try_files $uri $uri/ /react/login/index.html;
   }
