--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
 
   root /usr/share/nginx/html;
 
+  # ✅ QUAN TRỌNG: trả Location dạng relative, giữ nguyên :3000 ở client
+  absolute_redirect off;
+
   # ✅ FIX: handle "/react/login" (no trailing slash) without redirect
   location = /react/login {
     try_files /react/login/index.html =404;
