--- a/nginx.conf
+++ b/nginx.conf
@@ -4,14 +4,15 @@ server {
 
   root /usr/share/nginx/html;
 
-  # ✅ QUAN TRỌNG: trả Location dạng relative, giữ nguyên :3000 ở client
+  # Giữ nguyên port phía client (:3000)
   absolute_redirect off;
 
-  # ✅ FIX: handle "/react/login" (no trailing slash) without redirect
+  # Chuẩn hoá URL: /react/login -> /react/login/
   location = /react/login {
-    try_files /react/login/index.html =404;
+    return 301 /react/login/;
   }
 
+  # React SPA
   location /react/login/ {
     try_files $uri $uri/ /react/login/index.html;
   }
